--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "cm": "git-cz"
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
@@ -15,8 +16,11 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
+    "@types/react-redux": "^7.1.24",
+    "commitizen": "^4.2.1",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
+    "git-cz": "^4.7.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
@@ -37,6 +41,11 @@
     "eslint-plugin-react": "^7.31.8"
   },
   "private": true,
+  "config": {
+    "commitizen": {
+      "path": "git-cz"
+    }
+  },
   "resolutions": {
     "styled-components": "^5"
   }
